--- a/templates/resume/jsresume.html
+++ b/templates/resume/jsresume.html
@@ -65,7 +65,7 @@
         <div id="inner">
             <table id='hd'>
                 <td>
-                    <img src="{{user.userprofile.image.url}}" alt="">
+                    <img src="{{user.userprofile.image.path}}" alt="">
 
                 </td>
                 <td>
@@ -230,7 +230,7 @@
                                     <td></td>
                                 </tr>
                             </table>
-                            {% endif %}
+
                         </div>
                         {% endif %}
                         <br>
