resume problem solve

--- a/templates/resume/jsresume.html
+++ b/templates/resume/jsresume.html
@@ -72,29 +72,10 @@
                     <h1 style="color: #000038; font-size: 26px; font-weight: bolder; font-family: 'Times New Roman', Times, serif;">{{user.first_name}} {{user.last_name}}</h1>
                     <h3><i class='fa fa-envelop'></i><a href="#">Email: {{user.email}}</a></h3>
                     <p>{{user.userprofile.address}}</p>
-                    <h3><a id="pdf" href="{% url 'accounts:resumedownload' user.id %}">Download PDF</a></h3>
+                    <!-- <h3><a id="pdf" href="{% url 'accounts:resumedownload' user.id %}">Download PDF</a></h3> -->
                 </td>
 
             </table>
-            <!-- <div id="hd">
-                <div class="yui-gc">
-                    <div class="yui-u first">
-                        <h1 style="color: rgb(26, 29, 29); font-size: 26px; font-family: 'Times New Roman', Times, serif;">{{user.first_name}} {{user.last_name}}</h1>
-                        <h3><a href="#">Email: {{user.email}}</a></h3>
-                        <h3></h3>
-                        <p>{{user.userprofile.address}}</p>
-                    </div>
-
-                    <div class="yui-u">
-                        <div class="contact-info">
-                            <img src="{{user.userprofile.image.url}}" alt="">
-                            <h3><a id="pdf" href="{% url 'accounts:resumedownload' user.id %}">Download PDF</a></h3>
-
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-            <!--// hd -->
 
             <div id="bd">
                 <div id="yui-main">
@@ -110,18 +91,16 @@
                             </div>
                         </div>
                         <div class="yui-gf first data-table">
-                            {% if degrees %}
                             <table>
-                                <tr>
-                                    <th>
-                                        <h2>Education</h2>
-                                    </th>
-                                </tr>
+                                {% if degrees %}
+                                <div class="yui-u first">
+                                    <h2>Education</h2>
+                                </div>
                                 <tr>
                                     {% for degree in degrees %}
                                     <div class="job">
                                         <td>
-                                            <h2>{{degree.degree}}</h2>
+                                            <h2 style='color:#000038;'>{{degree.degree}}</h2>
                                             <h3>{{degree.institute_name}}</h3>
                                             <h4>Score: {{degree.cgpa}}</h4>
                                             <h4>Passing Year: {{degree.passing_year|date}}</h4>
@@ -130,16 +109,15 @@
                                     </div>
                                     {% endfor %}
                                 </tr>
+                                {% endif %}
                             </table>
-
-                            {% endif %} {% if degrees_two %}
+                            {% if degrees_two %}
                             <table>
                                 <tr>
                                     {% for degree in degrees_two %}
                                     <div class="job">
-
                                         <td>
-                                            <h2>{{degree.degree}}</h2>
+                                            <h2 style='color:#000038;'>{{degree.degree}}</h2>
                                             <h3>{{degree.institute_name}}</h3>
                                             <h4>Score: {{degree.cgpa}}</h4>
                                             <h4>Passing Year: {{degree.passing_year|date}}</h4>
@@ -147,8 +125,6 @@
                                     </div>
                                     {% endfor %} {% else %}
                                     <td></td>
-
-
                                 </tr>
                             </table>
                             {% endif %}
@@ -157,16 +133,14 @@
                         <div class="yui-gf first  data-table">
                             {% if skills %}
                             <table>
-                                <tr>
-                                    <th>
-                                        <h2>Skill</h2>
-                                    </th>
-                                </tr>
+                                <div class="yui-u first">
+                                    <h2>Skill</h2>
+                                </div>
                                 <tr>
                                     {% for skill in skills %}
                                     <div class="job">
                                         <td>
-                                            <h2>{{skill.name}}</h2>
+                                            <h2 style='color:#000038;'>{{skill.name}}</h2>
                                             <p>{{skill.details}}</p>
                                         </td>
                                     </div>
@@ -181,7 +155,7 @@
                                     {% for skill in skills_two %}
                                     <div class="job">
                                         <td>
-                                            <h2>{{skill.name}}</h2>
+                                            <h2 style='color:#000038;'>{{skill.name}}</h2>
                                             <p>{{skill.details}}</p>
                                         </td>
                                     </div>
@@ -192,19 +166,54 @@
                         </div>
                         <br>
                         <!--  -->
-                        {% if experiences %}
+                        {% if projects %}
                         <div class="yui-gf first  data-table">
                             <table>
+                                <div class="yui-u first">
+                                    <h2>Projects</h2>
+                                </div>
                                 <tr>
-                                    <th>
-                                        <h2>Experience</h2>
-                                    </th>
+                                    {% for pro in projects %}
+                                    <div class="job">
+                                        <td>
+                                            <h2 style='color:#000038;'>{{pro.proj_name}}</h2>
+                                            <p>{{pro.details}}</p>
+                                        </td>
+                                    </div>
+                                    {% endfor %}
                                 </tr>
+                            </table>
+                            {% endif %}
+                            <!--  -->
+                            {% if projects_two %}
+                            <table>
+                                <tr>
+                                    {% for pro in projects %}
+                                    <div class="job">
+                                        <td>
+                                            <h2 style='color:#000038;'>{{pro.proj_name}}</h2>
+                                            <p>{{pro.details}}</p>
+                                        </td>
+                                    </div>
+                                    {% endfor %} {% else %}
+                                    <td></td>
+                                </tr>
+                            </table>
+                        </div>
+                        {% endif %}
+                        <br>
+
+                        <div class="yui-gf first  data-table">
+                            {% if experiences %}
+                            <table>
+                                <div class="yui-u first">
+                                    <h2>Experiences</h2>
+                                </div>
                                 <tr>
                                     {% for exp in experiences %}
                                     <div class="job">
                                         <td>
-                                            <h2>{{exp.company_name}}</h2>
+                                            <h2 style='color:#000038;'>{{exp.company_name}}</h2>
                                             <h3>{{exp.position}}</h3>
                                             <h4>{{exp.from_date}} - {{exp.to_date}}</h4>
                                         </td>
@@ -212,8 +221,8 @@
                                     {% endfor %}
                                 </tr>
                             </table>
-
                             {% endif %}
+
                             <!--  -->
                             {% if experiences_two %}
                             <table>
@@ -221,71 +230,30 @@
                                     {% for exp in experiences_two %}
                                     <div class="job">
                                         <td>
-                                            <h2>{{exp.company_name}}</h2>
+                                            <h2 style='color:#000038;'>{{exp.company_name}}</h2>
                                             <h3>{{exp.position}}</h3>
                                             <h4>{{exp.from_date}} - {{exp.to_date}}</h4>
                                         </td>
                                     </div>
                                     {% endfor %} {% else %}
                                     <td></td>
-                                </tr>
-                            </table>
 
-                        </div>
-                        {% endif %}
-                        <br>
-                        <!--  -->
-                        {% if projects %}
-                        <div class="yui-gf first  data-table">
-                            <table>
-                                <tr>
-                                    <th>
-                                        <h2>Projects</h2>
-                                    </th>
-                                </tr>
-                                <tr>
-                                    {% for pro in projects %}
-                                    <div class="job">
-                                        <td>
-                                            <h2>{{pro.proj_name}}</h2>
-                                            <p>{{pro.details}}</p>
-                                        </td>
-                                    </div>
-                                    {% endfor %}
                                 </tr>
                             </table>
-
-                            {% endif %} {% if projects_two %}
-                            <table>
-                                <tr>
-                                    {% for pro in projects %}
-                                    <div class="job">
-                                        <td>
-                                            <h2>{{pro.proj_name}}</h2>
-                                            <p>{{pro.details}}</p>
-                                        </td>
-                                    </div>
-                                    {% endfor %} {% else %}
-                                    <td></td>
-                                </tr>
-                            </table>
+                            {% endif %}
                         </div>
-                        {% endif %}
                         <br>
-                        <!--  -->
-                        {% if courses %}
                         <div class="yui-gf first  data-table">
+                            {% if courses %}
                             <table>
-                                <tr>
-                                    <th>
-                                        <h2>Courses</h2>
-                                    </th>
-                                </tr>
+                                <div class="yui-u first">
+                                    <h2>Courses</h2>
+                                </div>
                                 <tr>
                                     {% for cor in courses %}
                                     <div class="job">
                                         <td>
-                                            <h2>{{cor.course_name}}</h2>
+                                            <h2 style='color:#000038;'>{{cor.course_name}}</h2>
                                             <h3>{{cor.institute_name}}</h3>
                                             <h4>Duration: {{cor.duration}} months</h4>
                                             <p>{{cor.details}}</p>
@@ -294,16 +262,13 @@
                                     {% endfor %}
                                 </tr>
                             </table>
-
-                            {% endif %}
-                            <!--  -->
-                            {% if courses_two %}
+                            {% endif %} {% if courses_two %}
                             <table>
                                 <tr>
                                     {% for cor in courses %}
                                     <div class="job">
                                         <td>
-                                            <h2>{{cor.course_name}}</h2>
+                                            <h2 style='color:#000038;'>{{cor.course_name}}</h2>
                                             <h3>{{cor.institute_name}}</h3>
                                             <h4>Duration: {{cor.duration}}</h4>
                                             <p>{{cor.details}}</p>
@@ -311,6 +276,7 @@
                                     </div>
                                     {% endfor %} {% else %}
                                     <td></td>
+
                                 </tr>
                             </table>
                         </div>
