course and last_date problem solved

--- a/templates/jobs/employee/applied-jobs.html
+++ b/templates/jobs/employee/applied-jobs.html
@@ -74,7 +74,7 @@
                         {% if job.job.type == '1' %}
                         <span class="badge featured-badge badge-success">Paid</span> {% elif job.job.type == '2' %}
                         <span class="badge featured-badge badge-primary">Unpaid</span> {% else %}
-                        <span style="color: #ffffff;" class="badge featured-badge badge-warning">Remote</span> {% endif %}
+                        <span style="color: #ffffff;" class="badge featured-badge badge-warning">Negotiable</span> {% endif %}
                     </div>
                     <br>
                     <div class="job__star">
