--- a/templates/jobs/details.html
+++ b/templates/jobs/details.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-lg-8">
                 <h3>Category: {{ job.category }}</h3>
-                <h6 class="text-info">Last date: {{ job.last_date|date }}</h6>
+                <h6 class="text-info">Last date: {{ job.last_time }}</h6>
                 <h6>Duration: {{ job.duration}}/months</h6>
                 <h6 class="text-info">Experience: {{ job.experience }}/Years</h6>
                 <h6>Gender: {{ job.gender }}</h6>
